# cradle

3dAppl0/: 3DAPPL0.CPP  3DAPPL0.DSK  3DAPPL0.PRJ  3dappl0.ini
3dAppl1/: 3DAPPL1.DSK  3DAPPL1.PRJ  3dappl1.cpp  3dappl1.ini
3dAppl3/: 3DAPPL3.CPP  3DAPPL3.DSK  3DAPPL3.PRJ  3dappl3.ini
3dAppl4/: 3DAPPL4.BAK  3DAPPL4.CPP  3DAPPL4.DSK  3DAPPL4.PRJ  TEMP.TXT
3dAppl5/: 3DAPPL5.CPP  3DAPPL5.DSK
3d_lib/: 3D.DSK  3D.PRJ
3d_lib/Include/: 3D.H  3d.h  COEFF.H  HEXAHEDR.H  INTRFMOU.H  MODE.H  PIX.H  SOLVE.H  VOBJBASE.H  ckey.h  coeff.h  demo.h  (+13 more)
3d_lib2/: 3D.PRJ  3D2.DSK  3D2.PRJ  3D3.DSK  3D3.PRJ  3d.dsk  3d.ini  CMakeLists.txt  TEMP.CPP
3d_lib2/Include/: 3d.h  DEMO.H  ELLIPSOD.H  INTRFMOU.H  Misc.h  PIX.H  PLANE.H  PNT.H  PT.H  ROT.H  SOLVE.H  ckey.h  coeff.h  demo.h  ellipsod.h  hexahedr.h  intrfmou.h  linsegax.h  misc.h  mode.h  mouse.h  pix.h  plane.h  pnt.h  rot.h  solve.h  vobjbase.h
3d_lib2/Lib/: 3D.LIB
3d_lib2/Source/: 3ddemo.cpp  CKey.cpp  ELLIPSOD.CPP  HEXAHEDR.CPP  MODE.CPP  Misc.cpp  PIX.CPP  VOBJBASE.CPP  ckey.cpp  coeff.cpp  demo.cpp  ellipsod.cpp  hexahedr.cpp  intrfmou.cpp  linsegax.cpp  misc.cpp  mode.cpp  pix.cpp  plane.cpp  pnt.cpp  vobjbase.cpp
AtoFu00/: ATOFU.CPP  ATOFU00.DSK  ATOFU00.PRJ  Atofu00.ini  DERIVATI.CPP  STD_FUNC.H  USAGE.CPP
AtoFu01/: ATOFU.CPP  ATOFU.H  ATOFU01.DSK  ATOFU01.PRJ  Atofu01.ini  DERIVATI.TXT  NOTES.TXT  Readme.txt  STD_FUNC.H  Std_func.cpp  TEMP.CPP  TEMP0001.CPP  USAGE.CPP
_AtoFu00/: ATOFU.CPP  ATOFU.H  ATOFU00.DSK  ATOFU00.PRJ  Readme.txt  Std_func.cpp  TEMP0000.CPP  USAGE.CPP
sdl2-bootstrap/: CMakeLists.txt
(+21 files in other folders)
